--- a/irfan.html
+++ b/irfan.html
@@ -20,11 +20,11 @@
   <title>I Love You</title>
   <meta name="description" content="Semangat beraktifitas ya sayang">
   <meta name="author" content="M.Rapi'i">
-  <link rel="stylesheet" href="/css/effek.css"> 
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/p.CSS">
-  <link rel="stylesheet" href="/css/c.CSS">
-  <script src="http://127.0.0.1:5500/irfan.html"></script>
+  <link rel="stylesheet" href="/buatmamau-/css/effek.css"> 
+  <link rel="stylesheet" href="/buatmamau-/css/style.css">
+  <link rel="stylesheet" href="/buatmamau-/css/p.CSS">
+  <link rel="stylesheet" href="/buatmamau-/css/c.CSS">
+  <script src="http://127.0.0.1:5500/buatmamau-/irfan.html"></script>
 
 </head>
 
