--- a/irfan.html
+++ b/irfan.html
@@ -92,7 +92,7 @@
     integrity="sha512-synHs+rLg2WDVE9U0oHVJURDCiqft60GcWOW7tXySy8oIr0Hjl3K9gv7Bq/gSj4NDVpc5vmsNkMGGJ6t2VpUMA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.rawgit.com/bungfrangki/efeksalju/2a7805c7/efek-salju.js" type="text/javascript"></script>
-  <script src="/irfancctv/js/script.js"></script>
+  <script src="/buatmamau-/js/script.js"></script>
   <script>
     document.getElementById("waktu").innerHTML = formatAMPM();
 
