--- a/irfan.html
+++ b/irfan.html
@@ -9,7 +9,7 @@
       <title>Autoplay Audio</title>
   </head>
   <body> 
-      <audio src="/buatmamau-/audio/WhatsApp Audio 2025-02-17 at 16.32.10_4246c5f9.mp3" type="audio/mpeg">
+      <audio src="/buatmamau-/audio/WhatsApp Audio 2025-02-17 at 16.32.10_4246c5f9.mp3" autoplay></audio>
   </body>
 <!-- end audio -->  
 
